<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fresco</string>
    <string name="search_hint">Search</string>
    <string name="action_settings">Settings</string>
    <string name="add_category">add</string>
    <string name="remove_category">remove</string>
    <string name="search_category">search</string>
    <string name="hello_world">Hello</string>
    <string name="no_cards"> is currently empty.\nPress add button to add a card.</string>
    <string name="done">Save</string>
    <string name="NewDeck">New Deck</string>
    <string name="hint">Name of the new Deck</string>
    <string name="cancel">Cancel</string>
    <string name="no_deckname">Name your new deck :)</string>
    <string name="dialogButton">Okay</string>
    <string name="deckName">Name of the Deck</string>
    <string name="defaultTerm">HelloWorld</string>
    <string name="defaultDefinition">The world is fair</string>
    <string name="submit">Submit</string>
    <string name="card">Card</string>
    <string name="front">FRONT</string>
    <string name="back">BACK</string>
    <string name="title_activity_activity_text">ActivityText</string>
    <string name="title_activity_activity_doodle">ActivityDoodle</string>
    <string name="title_activity_activity_gallery">ActivityGallery</string>
    <string name="title_activity_activity_camera">ActivityCamera</string>
    <string name="gallery">Go to Gallery</string>
    <string name="camera">Take a photo</string>
    <string name="delete_category">Delete</string>
    <string name="button_erase">Erase</string>
    <string name="button_cancel">Cancel</string>
    <string name="message_erase">Erase the drawing?</string>
    <string name="description">Camera</string>
    <string name="return_button">Return Button</string>
    <string name="deck_textview">Deck_1</string>
    <string name="edit_button">Edit Card</string>
    <string name="delete_button">Delete Card</string>
    <string name="add_button">Add Card</string>
    <string name="review_button">Review Card</string>
    <string name="front_back_tv">Front back</string>
    <string name="index_tv">Index TextView</string>
    <string name="take_picture">Take a picture</string>
    <string name="go_gallery">Get a photo</string>
    <string name="icon_image">Image1</string>
    <string name="no_icon">Select an Icon</string>
    <string name="delete">Delete this deck</string>
    <string name="front_bar_left">Front bar left</string>
    <string name="front_bar_right">Front bar right</string>
    <string name="back_bar_left">Back bar left</string>
    <string name="back_bar_right">Back bar right</string>
    <string name="card_front">Card front</string>
    <string name="card_back">Card back</string>
    <string name="match">M</string>
    <string name="game">Game</string>
    <string name="facebook">Facebook</string>
    <string name="get_a_deck">Get a Deck</string>
    <string name="challenge">Challenge a friend</string>
    <string name="what_new">News</string>
    <string name="face">Face</string>
    <string name="name">Name</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
     <string name="matching_result">Match result</string>
     <string name="next_set">Next Set</string>
     <string name="show_answer">Show Answer</string>
     <string name="arrow">Arrow</string>
     <string name="review_deck">Review this deck</string>
     <string name="delete_card">Delete this card</string>
     <string name="edit_card">Edit this card</string>
     <string name="add_card">Add a new card</string>

</resources>