<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.Drawer xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/face"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/green_sea_focused"
                android:contentDescription="@string/face"
                android:src="@drawable/cloud" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/light_blue"
                android:gravity="center"
                android:text="@string/name" />
        </LinearLayout>

        <Button
            android:id="@+id/game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game" />

        <Button
            android:id="@+id/facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook" />

        <Button
            android:id="@+id/getADeck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_a_deck" />

        <Button
            android:id="@+id/challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenge" />

        <Button
            android:id="@+id/news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_new" />
    </LinearLayout>

</android.support.v4.widget.Drawer>